deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-web-app
spec:
  replicas: 5
  selector:
    matchLabels:
      name: go-web-app
  template:
    metadata:
      labels:
        name: go-web-app
    spec:
      containers:
      - name: application
        image: sivakarthi/go-web-app 
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
