service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: go-web-service
spec:
  ports:
  - name: http
    port: 3000 
    targetPort: 3000
  selector:
    name: go-web-app
